# steamlocate-rs

./: .editorconfig  .gitignore  CHANGELOG.md  Cargo.toml  README.md  README.tpl  RELEASE.md
.cargo/: config.toml
.github/workflows/: build.yml  ci.yml  publish.yml
examples/: appmanifest.rs  multiple-dirs.rs  overview.rs  shortcuts.rs
src/: __test_helpers.rs  app.rs  config.rs  error.rs  lib.rs  library.rs  libraryfolders.rs  locate.rs  shortcut.rs  steamapp.rs  steamapps.rs  steamcompat.rs  steamcompats.rs  test_helpers.rs  tests.rs
src/__private_tests/: helpers.rs  legacy.rs  mod.rs  temp.rs  tests.rs  wasm.rs
src/locate/: linux.rs  macos.rs  mod.rs  windows.rs
src/snapshots/: steamlocate__app__tests__minimal.snap  steamlocate__app__tests__more_sanity.snap  steamlocate__app__tests__sanity.snap  steamlocate__steamapp__tests__more_sanity.snap  steamlocate__steamapp__tests__sanity.snap
src/tests/: helpers.rs  legacy.rs  mod.rs  temp.rs  test_helpers.rs  tests.rs
tests/: legacy.rs  tests.rs  wasm.rs
tests/assets/: appmanifest_230410.acf  appmanifest_2519830.acf  appmanifest_4000.acf  appmanifest_599140.acf  libraryfolder.vdf  shortcuts_different_order.vdf
tests/sample_data/: shortcuts.vdf  shortcuts_different_key_case.vdf  shortcuts_just_gog_moonlighter.vdf
