[package]
name = "steamlocate"
version = "2.0.0-beta.2"
authors = ["William Venner <william@venner.io>"]
edition = "2018"
repository = "https://github.com/WilliamVenner/steamlocate-rs"
license = "MIT"
description = "Rust Crate for locating Steam game installation directories (and Steam itself!)"
readme = "README.md"
keywords = ["steam", "vdf", "appmanifest", "directory", "steamapps"]
categories = ["os", "hardware-support", "filesystem", "accessibility"]

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[features]
default = ["locate"]
locate = ["locate_backend"]

[dependencies]
anyhow = "1.0.86"
crc = "3.0"
keyvalues-parser = "0.2"
keyvalues-serde = "0.2"
serde = { version = "1.0.0", features = ["derive"] }

# Platform-specific dependencies used for locating the steam dir
[target."cfg(target_os=\"windows\")".dependencies]
locate_backend = { package = "winreg", version = "0.51", optional = true }
[target."cfg(not(target_os=\"windows\"))".dependencies]
locate_backend = { package = "dirs", version = "5", optional = true }

[dev-dependencies]
insta = { version = "1.34.0", features = ["ron"] }
wasm-bindgen-test = "0.3.39"

[[example]]
name = "appmanifest"
required-features = ["locate"]

[[example]]
name = "overview"
required-features = ["locate"]

[[example]]
name = "shortcuts"
required-features = ["locate"]
