[package]
name = "steamlocate"
version = "2.0.0-beta.2"
authors = [
    "William Venner <william@venner.io>",
	"Cosmic <CosmicHorrorDev@pm.me>",
]
edition = "2021"
repository = "https://github.com/WilliamVenner/steamlocate-rs"
license = "MIT"
description = "Crate for locating Steam game installation directories (and Steam itself!)"
keywords = ["steam", "vdf", "appmanifest", "directory", "steamapps"]
categories = ["config", "filesystem"]
rust-version = "1.70.0"

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[features]
default = ["locate"]
locate = ["locate_backend"]

[dependencies]
crc = "3.0"
keyvalues-parser = "0.2"
keyvalues-serde = "0.2"
serde = { version = "1.0.0", features = ["derive"] }

# Platform-specific dependencies used for locating the steam dir
[target."cfg(target_os=\"windows\")".dependencies]
locate_backend = { package = "winreg", version = "0.51", optional = true }
[target."cfg(any(target_os=\"macos\", target_os=\"linux\"))".dependencies]
locate_backend = { package = "home", version = "0.5.9", optional = true }
# Other platforms aren't supported for locating, so we use a dummy package that
# we already depend on since it won't be used for anything
[target."cfg(not(any(target_os=\"windows\", target_os=\"macos\", target_os=\"linux\")))".dependencies]
locate_backend = { package = "serde_derive", version = "1.0.0", optional = true }

[dev-dependencies]
insta = { version = "1.34.0", features = ["ron"] }
wasm-bindgen-test = "0.3.39"

[[example]]
name = "appmanifest"
required-features = ["locate"]

[[example]]
name = "overview"
required-features = ["locate"]

[[example]]
name = "shortcuts"
required-features = ["locate"]
