[package]
name = "steamlocate"
version = "2.0.1"
authors = [
    "William Venner <william@venner.io>",
    "Cosmic <CosmicHorrorDev@pm.me>",
]
edition = "2021"
repository = "https://github.com/WilliamVenner/steamlocate-rs"
license = "MIT"
description = "Crate for locating Steam game installation directories (and Steam itself!)"
keywords = ["steam", "vdf", "appmanifest", "directory", "steamapps"]
categories = ["config", "filesystem"]
rust-version = "1.70.0"

[package.metadata.docs.rs]
rustdoc-args = ["--cfg", "docsrs"]

[dependencies]
crc = "3.0"
keyvalues-parser = "0.2"
keyvalues-serde = "0.2"
serde = "1.0"
serde_derive = "1.0"

# Platform-specific dependencies used for locating the steam dir
[target."cfg(target_os=\"windows\")".dependencies]
winreg = "0.55.0"
[target."cfg(any(target_os=\"macos\", target_os=\"linux\"))".dependencies]
home = "0.5.9"

[dev-dependencies]
insta = { version = "1.34.0", features = ["ron"] }
wasm-bindgen-test = "0.3.39"

[[example]]
name = "appmanifest"

[[example]]
name = "overview"

[[example]]
name = "shortcuts"
